tests/ui/field_not_pure_clone.stderr
error[E0277]: the trait bound `Foo: PureClone` is not satisfied
  --> $DIR/field_not_pure_clone.rs:8:8
   |
8  |     f: Foo,
   |        ^^^ the trait `PureClone` is not implemented for `Foo`
   |
note: required by `pure_clone`
  --> $DIR/clone.rs:38:5
   |
38 |     fn pure_clone(&self) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
